# Projeto_Scraping

./: README.md  dados_coletados.csv  pyproject.toml
project_web/: __init__.py
